Update Expedited SNAP and CCAP Calculations (#691)
[#181032210]

Co-authored-by: Alex Gonzalez <agonzalez@codeforamerica.org>
Co-authored-by: Taylor Johnson <taylor.johnson@state.mn.us>
Co-authored-by: Ramesh Shakya <ramesh.shakya@state.mn.us>
Co-authored-by: Touhid Khan <touhid.khan@state.mn.us>